--- a/pages/index.ejs
+++ b/pages/index.ejs
@@ -34,7 +34,7 @@
         <ul class="list-group">
           <% for (let i = 0; i < notes.length; i++) {%>
           <li class="list-group-item d-flex justify-content-between align-items-center">
-            <%= notes[i].title %>
+            <span class="title"><%= notes[i].title %></span>
             <div class="actions">
               <button class="btn btn-primary" data-type="edit" data-id="<%=notes[i].id%>">
                 Редактировать
